# Quiz

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  user_answers.diff
.github/workflows/: backend.yml  quiz_app_ci.yml  quiz_app_trigger_ci.yml
quiz_app/: pytest.ini
quiz_app/questions/: admin.py  factories.py  forms.py  models.py  urls.py  utils.py  views.py
quiz_app/questions/management/commands/: populate_database.py
quiz_app/questions/migrations/: 0001_initial.py  0002_useranswer.py  0003_useranswer_quiz.py
quiz_app/questions/static/: isCorrect.js
quiz_app/questions/templates/: answer.html  question.html  questions.html  single_question.html  user_answers.html
quiz_app/quiz_app/: settings.py  urls.py
quiz_app/quiz_app/tests/: conftest.py  test_commands.py  test_models.py  test_questions_utils.py  test_questions_views.py  test_quiz_utils.py  test_quizzes_views.py  test_user_views.py
quiz_app/quizzes/: forms.py  models.py  urls.py  utils.py  views.py
quiz_app/quizzes/migrations/: 0001_initial.py
quiz_app/quizzes/templates/: quiz_stats.html  start_quiz.html
quiz_app/static/css/: app.css
quiz_app/templates/: base.html
quiz_app/user/: urls.py  views.py
quiz_app/user/templates/: login.html  register.html
