[tool.poetry]
name = "quiz"
version = "0.1.0"
description = "New quiz app"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.0.5"
psycopg2-binary = "2.9.3"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-django = "4.5.2"
black = "22.3.0"
isort = "5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
